# graham-scan

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: arr.hpp  avl.hpp  geometry.hpp  rbt.hpp
src/: arr.cpp  avl.cpp  main.cpp  rbt.cpp  rbt.hpp
